--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="./css/mdb.min.css" />
     <link rel="stylesheet" href="./css/scrollbar.css" />
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/owl.carousel.min.css" />
+    <link rel="stylesheet" href="./css/owl.theme.default.min.css" />
     <title>Code Space</title>
   </head>
   <body>
@@ -31,16 +33,24 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a
+                  class="nav-link text-primary fw-bold"
+                  aria-current="page"
+                  href="#"
+                  >Home</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
+                <a class="nav-link text-dark" href="#">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
+                <a class="nav-link text-dark" href="#">Teams</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled">Disabled</a>
+                <a href="#" class="nav-link text-dark">Project</a>
+              </li>
+              <li class="nav-item">
+                <a href="#" class="nav-link text-dark">Contact Us</a>
               </li>
             </ul>
           </div>
@@ -49,13 +59,14 @@
 
         <!-- Hero -->
         <div class="row">
-          <div class="col-md-6">
-            <h5 class="fw-bold text-dark">/ 01</h5>
+          <div class="col-lg-6 col-md-12">
+            <h4 class="fw-bold text-dark mb-2">/ 01</h4>
             <h1 class="text-dark fw-bold">
-              We Don't Just <span class="text-primary">Write Codes</span> <br />
-              We Build <span class="text-primary">Brands</span>
+              We Don't Just <span class="text-primary">Write Codes</span>.
+              <br />
+              We Build <span class="text-primary">Brands</span>.
             </h1>
-            <img class="mt-3 mb-5" src="./img/line.png" />
+            <img class="mt-3 mb-5 img-responsive w-100" src="./img/line.png" />
             <p class="text-dark">
               ©CODESPACE is a Platform that aims to build a community for
               teenagers. The platform aims to show the world how ready and
@@ -84,14 +95,14 @@
               </button>
 
               <button
-                class="btn ms-lg-3 mt-md-3 mt-sm-0 fw-bold shadow-none custom-btn btn-outline-dark"
+                class="btn ms-lg-3 mt-3 mt-lg-0 mt-sm-0 fw-bold shadow-none custom-btn btn-outline-dark"
               >
                 Join The Community
               </button>
             </div>
           </div>
 
-          <div class="col-md-6 mt-md-3">
+          <div class="col-lg-6 col-md-12 mt-lg-0 mb-lg-0 mt-3 mb-3">
             <img class="img-responsive w-100" src="./img/cover.png" alt="" />
           </div>
         </div>
@@ -101,20 +112,20 @@
     <div class="container-fluid bg-primary">
       <div class="card-body d-flex mx-auto">
         <div class="row c-section">
-          <div class="col-md-4">
+          <div class="col-lg-4 col-md-6 mb-lg-0 mb-xl-0 mb-3">
             <img class="w-100 img-responsive" src="./img/clinton.png" alt="" />
           </div>
-          <div class="col-md-7 ms-lg-5 mt-sm-4 text-white">
+          <div class="col-lg-7 col-md-6 ms-lg-5 mt-sm-4 text-white">
             <h2 class="fw-bold">Clinton .E. Imaro</h2>
             <p class="text-light">CEO of Code Space</p>
-            <p>
+            <p class="fs-6">
               Clinton Imaro is a student and a Nigerian from Benin City, Edo
               State, with an undying passion for the creative and technology
               industry. He is a self-taught Programmer, Story Teller, Filmmaker,
               Editor and Tech Content Creator. He is passionate about edtech
               advocacy and looks forward to becoming a Future Skills Activist.
             </p>
-            <p class="mt-5">
+            <p class="mt-4 fs-6">
               He is also the founder of Code Space and Afro Now. Code Space is a
               platform that aims to build a community for teenagers. Founded in
               2020 because of his love for early teaching tech skills to young
@@ -131,13 +142,68 @@
     <div class="team mt-5">
       <div class="container">
         <p class="text-primary">Our Team</p>
-        <h1 class="fw-bold">
+        <h1 class="fw-bold mb-5 text-dark">
           Our Team of Designers <br />
           and Developers
         </h1>
+
+        <div class="owl-carousel owl-theme">
+          <div>
+            <img class="w-100" src="./img/team1.png" alt="" />
+            <p class="mt-3 text-dark fs-5">John Oseni</p>
+            <small>Developer</small>
+          </div>
+          <div>
+            <img class="w-100" src="./img/team2.png" alt="" />
+            <p class="mt-3 text-dark fs-5">John Oseni</p>
+            <small>Developer</small>
+          </div>
+          <div>
+            <img class="w-100" src="./img/team4.png" alt="" />
+            <p class="mt-3 text-dark fs-5">John Oseni</p>
+            <small>Developer</small>
+          </div>
+          <div>
+            <img class="w-100" src="./img/team3.png" alt="" />
+            <p class="mt-3 text-dark fs-5">John Oseni</p>
+            <small>Developer</small>
+          </div>
+        </div>
       </div>
     </div>
 
+    <div class="mt-3"></div>
+
     <script src="./js/mdb.min.js"></script>
+    <script src="./js/jquery.min.js"></script>
+    <script src="./js/owl.carousel.min.js"></script>
+    <script>
+      $(document).ready(function () {
+        $(".owl-carousel").owlCarousel({
+          responsiveClass: true,
+          margin: 20,
+          nav: true,
+          loop: true,
+          responsive: {
+            0: {
+              items: 2,
+              nav: false,
+            },
+            600: {
+              items: 2,
+              nav: false,
+            },
+            800: {
+              items: 3,
+              nav: false,
+            },
+            1200: {
+              items: 4,
+              nav: false,
+            },
+          },
+        });
+      });
+    </script>
   </body>
 </html>
