--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Code Space</title>
   </head>
   <body>
-    <header class="px-5 pt-3">
+    <header class="px-lg-5 px-md-3 pt-3">
       <div class="container-fluid">
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg navbar-light shadow-none mb-5">
@@ -66,9 +66,13 @@
               <br />
               We Build <span class="text-primary">Brands</span>.
             </h1>
-            <img class="mt-3 mb-5 img-responsive w-100" src="./img/line.png" />
+            <img
+              draggable="false"
+              class="mt-3 mb-5 img-responsive mw-100"
+              src="./img/line.png"
+            />
             <p class="text-dark">
-              ©CODESPACE is a Platform that aims to build a community for
+              &copy;CODESPACE is a Platform that aims to build a community for
               teenagers. The platform aims to show the world how ready and
               capable We teenagers are to rewrite the African narrative through
               technology. The platform further exists as a tech-based freelance
@@ -80,9 +84,25 @@
                 <p class="text-dark">Follow Us</p>
 
                 <div class="social-icons ms-3">
-                  <img src="./img/instagram.png" alt="" />
-                  <img class="ms-2" src="./img/youtube.png" alt="" />
-                  <img class="ms-2" src="./img/dribbble.png" alt="" />
+                  <a href="#">
+                    <img draggable="false" src="./img/instagram.png" alt="" />
+                  </a>
+                  <a href="#">
+                    <img
+                      draggable="false"
+                      class="ms-2"
+                      src="./img/youtube.png"
+                      alt=""
+                    />
+                  </a>
+                  <a href="#">
+                    <img
+                      draggable="false"
+                      class="ms-2"
+                      src="./img/dribbble.png"
+                      alt=""
+                    />
+                  </a>
                 </div>
               </div>
             </div>
@@ -103,7 +123,12 @@
           </div>
 
           <div class="col-lg-6 col-md-12 mt-lg-0 mb-lg-0 mt-3 mb-3">
-            <img class="img-responsive w-100" src="./img/cover.png" alt="" />
+            <img
+              draggable="false"
+              class="img-responsive mw-100"
+              src="./img/cover.png"
+              alt=""
+            />
           </div>
         </div>
       </div>
@@ -113,7 +138,12 @@
       <div class="card-body d-flex mx-auto">
         <div class="row c-section">
           <div class="col-lg-4 col-md-6 mb-lg-0 mb-xl-0 mb-3">
-            <img class="w-100 img-responsive" src="./img/clinton.png" alt="" />
+            <img
+              draggable="false"
+              class="mw-100 img-responsive"
+              src="./img/clinton.png"
+              alt=""
+            />
           </div>
           <div class="col-lg-7 col-md-6 ms-lg-5 mt-sm-4 text-white">
             <h2 class="fw-bold">Clinton .E. Imaro</h2>
@@ -149,30 +179,121 @@
 
         <div class="owl-carousel owl-theme">
           <div>
-            <img class="w-100" src="./img/team1.png" alt="" />
-            <p class="mt-3 text-dark fs-5">John Oseni</p>
+            <img draggable="false" class="w-100" src="./img/team1.png" alt="" />
+            <p class="mt-3 fw-bold text-dark fs-4">John Oseni</p>
             <small>Developer</small>
           </div>
           <div>
-            <img class="w-100" src="./img/team2.png" alt="" />
-            <p class="mt-3 text-dark fs-5">John Oseni</p>
+            <img draggable="false" class="w-100" src="./img/team2.png" alt="" />
+            <p class="mt-3 fw-bold text-dark fs-4">John Oseni</p>
             <small>Developer</small>
           </div>
           <div>
-            <img class="w-100" src="./img/team4.png" alt="" />
-            <p class="mt-3 text-dark fs-5">John Oseni</p>
+            <img draggable="false" class="w-100" src="./img/team4.png" alt="" />
+            <p class="mt-3 fw-bold text-dark fs-4">John Oseni</p>
             <small>Developer</small>
           </div>
           <div>
-            <img class="w-100" src="./img/team3.png" alt="" />
-            <p class="mt-3 text-dark fs-5">John Oseni</p>
+            <img draggable="false" class="w-100" src="./img/team3.png" alt="" />
+            <p class="mt-3 fw-bold text-dark fs-4">John Oseni</p>
             <small>Developer</small>
           </div>
         </div>
       </div>
     </div>
 
-    <div class="mt-3"></div>
+    <div class="mt-5 mb-5">
+      <div class="container bg-primary rounded-3">
+        <div class="card-body">
+          <div class="row c-section">
+            <div class="col-md-5">
+              <h1 class="text-white fw-bold fs-1">Let's Help Build <br /> Your Dream <br /> Projects</h1>
+              <p class="text-white">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Placeat, excepturi aliquam. Iusto molestiae sapiente harum
+                facere, natus unde quibusdam qui voluptate, distinctio dolor
+                culpa recusandae incidunt aspernatur nulla, amet sequi!
+              </p>
+            </div>
+            <div class="col-md-6">
+              <img
+                class="img-responsive mw-100"
+                draggable="false"
+                src="./img/pic.png"
+                alt=""
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Footer -->
+    <footer class="bg-light text-lg-left">
+      <!-- Grid container -->
+      <div class="container px-1 py-5">
+        <!--Grid row-->
+        <div class="row my-auto mt-3">
+          <!--Grid column-->
+          <div class="col-lg-6 col-md-12 mb-md-0">
+            <h5 class="fw-bold fs-3">Code Space.</h5>
+
+            <p class="pt-4">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste
+              atque ea quis molestias. Fugiat pariatur maxime quis culpa
+              corporis vitae repudiandae
+            </p>
+          </div>
+          <!--Grid column-->
+
+          <!--Grid column-->
+          <div class="col-lg-6 col-md-12 mb-md-0">
+
+            <div class="d-flex" style="justify-content: flex-end;">
+              <div class="social-icons ms-3">
+                <a href="#">
+                  <img draggable="false" src="./img/instagram.png" alt="" />
+                </a>
+                <a href="#">
+                  <img
+                    draggable="false"
+                    class="ms-2"
+                    src="./img/youtube.png"
+                    alt=""
+                  />
+                </a>
+                <a href="#">
+                  <img
+                    draggable="false"
+                    class="ms-2"
+                    src="./img/dribbble.png"
+                    alt=""
+                  />
+                </a>
+              </div>
+
+            </div>
+            <p class="mt-4 fs-5 d-flex" style="justify-content: flex-end">Send us a question <a class="ms-2" href="mailto: hello@codespace.com">hello@codespace.com</a></p>
+          </div>
+          </div>
+          <!--Grid column-->
+        </div>
+        <!--Grid row-->
+      </div>
+      <!-- Grid container -->
+
+      <!-- Copyright -->
+      <div
+        class="text-center my-auto p-3"
+      >
+      <p class="text-dark">
+        &copy; 2022 | All Right's Reserved by
+        <a class="text-dark" href="https://codesspace.in/">Code Space</a>
+      </p>
+      </div>
+      <!-- Copyright -->
+    </footer>
+    <!-- Footer -->
 
     <script src="./js/mdb.min.js"></script>
     <script src="./js/jquery.min.js"></script>
@@ -183,23 +304,24 @@
           responsiveClass: true,
           margin: 20,
           nav: true,
+          navText: ["<", ">"],
           loop: true,
           responsive: {
             0: {
-              items: 2,
-              nav: false,
+              items: 1,
+              nav: true,
             },
             600: {
               items: 2,
-              nav: false,
+              nav: true,
             },
             800: {
               items: 3,
-              nav: false,
+              nav: true,
             },
             1200: {
               items: 4,
-              nav: false,
+              nav: true,
             },
           },
         });
