--- a/coming-soon.html
+++ b/coming-soon.html
@@ -27,15 +27,26 @@
           src="./img/line2.png"
         />
 
-        <div class="d-flex mt-3" style="justify-content: center">
-          <p class="text-dark">Follow Us</p>
+        <div
+          class="d-flex mt-3"
+          style="justify-content: center; align-items: center"
+        >
+          <p class="text-dark my-auto">Follow Us</p>
 
           <div class="social-icons ms-3">
             <a href="#">
-              <img draggable="false" src="./img/instagram.png" alt="" />
+              <img
+                width="35"
+                height="35"
+                draggable="false"
+                src="./img/instagram.png"
+                alt=""
+              />
             </a>
             <a href="#">
               <img
+                width="35"
+                height="35"
                 draggable="false"
                 class="ms-2"
                 src="./img/github.png"
@@ -44,6 +55,8 @@
             </a>
             <a href="#">
               <img
+                width="35"
+                height="35"
                 draggable="false"
                 class="ms-2"
                 src="./img/twitter.png"
