--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/owl.carousel.min.css" />
     <link rel="stylesheet" href="./css/owl.theme.default.min.css" />
+    <link rel="shortcut icon" href="./img/fav.png" type="image/x-icon" />
     <title>Code Space</title>
   </head>
   <body>
@@ -68,8 +69,9 @@
             </h1>
             <img
               draggable="false"
-              class="mt-3 mb-5 img-responsive mw-100"
+              class="mt-2 mb-3 img-responsive"
               src="./img/line.png"
+              style="width: 350px"
             />
             <p class="text-dark">
               &copy;CODESPACE is a Platform that aims to build a community for
@@ -107,7 +109,7 @@
               </div>
             </div>
 
-            <div class="call-to-action mt-5 pb-4">
+            <div class="call-to-action mt-4 pb-4">
               <button
                 class="btn btn-primary btn-lg fw-bold shadow-none custom-btn"
               >
@@ -169,59 +171,126 @@
       </div>
     </div>
 
-    <div class="team mt-5">
-      <div class="container">
-        <p class="text-primary">Our Team</p>
-        <h1 class="fw-bold mb-5 text-dark">
-          Our Team of Designers <br />
-          and Developers
-        </h1>
+    <div class="bg-light">
+      <div class="team pb-5 pt-5">
+        <div class="container">
+          <p class="text-primary">Our Team</p>
+          <h1 class="ep fw-bold mb-5 text-dark">
+            Our Team of Designers <br />
+            and Developers
+          </h1>
 
-        <div class="owl-carousel owl-theme">
-          <div>
-            <img draggable="false" class="w-100" src="./img/team1.png" alt="" />
-            <p class="mt-3 fw-bold text-dark fs-4">John Oseni</p>
-            <small>Developer</small>
-          </div>
-          <div>
-            <img draggable="false" class="w-100" src="./img/team2.png" alt="" />
-            <p class="mt-3 fw-bold text-dark fs-4">John Oseni</p>
-            <small>Developer</small>
-          </div>
-          <div>
-            <img draggable="false" class="w-100" src="./img/team4.png" alt="" />
-            <p class="mt-3 fw-bold text-dark fs-4">John Oseni</p>
-            <small>Developer</small>
-          </div>
-          <div>
-            <img draggable="false" class="w-100" src="./img/team3.png" alt="" />
-            <p class="mt-3 fw-bold text-dark fs-4">John Oseni</p>
-            <small>Developer</small>
+          <div class="owl-carousel owl-theme">
+            <div>
+              <img
+                draggable="false"
+                class="w-100"
+                src="./img/team1.png"
+                alt=""
+              />
+              <p class="mt-3 fw-bold text-dark fs-4">John Oseni</p>
+              <small>Developer</small>
+            </div>
+            <div>
+              <img
+                draggable="false"
+                class="w-100"
+                src="./img/team2.png"
+                alt=""
+              />
+              <p class="mt-3 fw-bold text-dark fs-4">John Oseni</p>
+              <small>Developer</small>
+            </div>
+            <div>
+              <img
+                draggable="false"
+                class="w-100"
+                src="./img/team4.png"
+                alt=""
+              />
+              <p class="mt-3 fw-bold text-dark fs-4">John Oseni</p>
+              <small>Developer</small>
+            </div>
+            <div>
+              <img
+                draggable="false"
+                class="w-100"
+                src="./img/team3.png"
+                alt=""
+              />
+              <p class="mt-3 fw-bold text-dark fs-4">John Oseni</p>
+              <small>Developer</small>
+            </div>
           </div>
         </div>
       </div>
-    </div>
 
-    <div class="mt-5 mb-5">
-      <div class="container bg-primary rounded-3">
-        <div class="card-body">
-          <div class="row c-section">
-            <div class="col-md-5">
-              <h1 class="text-white fw-bold fs-1">Let's Help Build <br /> Your Dream <br /> Projects</h1>
-              <p class="text-white">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Placeat, excepturi aliquam. Iusto molestiae sapiente harum
-                facere, natus unde quibusdam qui voluptate, distinctio dolor
-                culpa recusandae incidunt aspernatur nulla, amet sequi!
-              </p>
+      <div class="mt-5 mb-5 pt-2 pb-3">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-4 text-center">
+              <img src="./img/icon2.png" alt="Icon" />
+              <h4 class="text-dark mt-3 fw-bold">Blazing Fast Web Hosting</h4>
+              <small>
+                We Keep Your Web build Online 24x7x365. Downtime not only costs
+                you lost visitors but also damages your reputation and search
+                engine rankings
+              </small>
             </div>
-            <div class="col-md-6">
-              <img
-                class="img-responsive mw-100"
-                draggable="false"
-                src="./img/pic.png"
-                alt=""
-              />
+
+            <div class="col-md-4 text-center">
+              <img src="./img/icon3.png" alt="Icon" />
+              <h4 class="text-dark mt-3 fw-bold">Free SSL Certificates</h4>
+              <small>
+                We Keep Your Web build Online 24x7x365. Downtime not only costs
+                you lost visitors but also damages your reputation and search
+                engine rankings.
+              </small>
+            </div>
+
+            <div class="col-md-4 text-center">
+              <img src="./img/icon4.png" alt="Icon" />
+              <h4 class="text-dark mt-3 fw-bold">24x7 Friendly Support</h4>
+              <small>
+                We Keep Your Web build Online 24x7x365. Downtime not only costs
+                you lost visitors but also damages your reputation and search
+                engine rankings.
+              </small>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="mt-5 pt-5 pb-5">
+        <div class="container bg-primary rounded-3">
+          <div class="card-body">
+            <div class="row c-section">
+              <div class="col-md-5">
+                <h1 class="text-white fw-bold display-4 ep">
+                  Let's Help Build <br />
+                  Your Dream <br />
+                  Projects
+                </h1>
+                <p class="text-white mt-5 text-light ep">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Placeat, excepturi aliquam.
+                </p>
+
+                <button
+                  class="btn btn-white mt-3 btn-lg fw-bold shadow-none custom-btn ep"
+                  style="color: #391400"
+                >
+                  Discover More
+                </button>
+              </div>
+              <div class="col-md-6">
+                <img
+                  class="img-responsive mw-100"
+                  draggable="false"
+                  src="./img/pic.png"
+                  alt=""
+                />
+              </div>
             </div>
           </div>
         </div>
@@ -231,7 +300,7 @@
     <!-- Footer -->
     <footer class="bg-light text-lg-left">
       <!-- Grid container -->
-      <div class="container px-1 py-5">
+      <div class="container px-3 py-5">
         <!--Grid row-->
         <div class="row my-auto mt-3">
           <!--Grid column-->
@@ -247,10 +316,9 @@
           <!--Grid column-->
 
           <!--Grid column-->
-          <div class="col-lg-6 col-md-12 mb-md-0">
-
-            <div class="d-flex" style="justify-content: flex-end;">
-              <div class="social-icons ms-3">
+          <div class="col-lg-6 mt-5 mt-lg-0 col-md-12 mb-md-0">
+            <div>
+              <div class="social-icons">
                 <a href="#">
                   <img draggable="false" src="./img/instagram.png" alt="" />
                 </a>
@@ -271,10 +339,10 @@
                   />
                 </a>
               </div>
-
             </div>
-            <p class="mt-4 fs-5 d-flex" style="justify-content: flex-end">Send us a question <a class="ms-2" href="mailto: hello@codespace.com">hello@codespace.com</a></p>
-          </div>
+            <div class="mt-4 ms-auto fs-5" style="justify-content: flex-end">
+              <a href="mailto: hello@codespace.com">hello@codespace.com</a>
+            </div>
           </div>
           <!--Grid column-->
         </div>
@@ -283,13 +351,11 @@
       <!-- Grid container -->
 
       <!-- Copyright -->
-      <div
-        class="text-center my-auto p-3"
-      >
-      <p class="text-dark">
-        &copy; 2022 | All Right's Reserved by
-        <a class="text-dark" href="https://codesspace.in/">Code Space</a>
-      </p>
+      <div class="text-center my-auto p-3">
+        <p class="text-dark">
+          &copy; 2022 | All Right's Reserved by
+          <a class="text-dark" href="https://codesspace.in/">Code Space</a>
+        </p>
       </div>
       <!-- Copyright -->
     </footer>
