--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Font Awesome -->
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/mdb.min.css" />
     <link rel="stylesheet" href="./css/scrollbar.css" />
     <link rel="stylesheet" href="./css/style.css" />
@@ -83,7 +88,7 @@
 
             <div>
               <div class="d-flex mt-5">
-                <p class="text-dark">Follow Us</p>
+                <p class="text-dark my-auto">Follow Us</p>
 
                 <div class="social-icons ms-3">
                   <a href="#">
@@ -124,7 +129,7 @@
             </div>
           </div>
 
-          <div class="col-lg-6 col-md-12 mt-lg-0 mb-lg-0 mt-3 mb-3">
+          <div class="col-lg-6 col-md-12 mt-lg-0 mb-lg-0 mt-3 pb-3">
             <img
               draggable="false"
               class="img-responsive mw-100"
@@ -180,7 +185,7 @@
             and Developers
           </h1>
 
-          <div class="owl-carousel owl-theme">
+          <div class="owl-carousel teams owl-theme">
             <div>
               <img
                 draggable="false"
@@ -188,7 +193,7 @@
                 src="./img/team1.png"
                 alt=""
               />
-              <p class="mt-3 fw-bold text-dark fs-4">John Oseni</p>
+              <p class="mt-3 fw-bold text-dark fs-4 ep">John Oseni</p>
               <small>Developer</small>
             </div>
             <div>
@@ -198,7 +203,7 @@
                 src="./img/team2.png"
                 alt=""
               />
-              <p class="mt-3 fw-bold text-dark fs-4">John Oseni</p>
+              <p class="mt-3 fw-bold text-dark fs-4 ep">John Oseni</p>
               <small>Developer</small>
             </div>
             <div>
@@ -208,7 +213,7 @@
                 src="./img/team4.png"
                 alt=""
               />
-              <p class="mt-3 fw-bold text-dark fs-4">John Oseni</p>
+              <p class="mt-3 fw-bold text-dark fs-4 ep">John Oseni</p>
               <small>Developer</small>
             </div>
             <div>
@@ -218,7 +223,7 @@
                 src="./img/team3.png"
                 alt=""
               />
-              <p class="mt-3 fw-bold text-dark fs-4">John Oseni</p>
+              <p class="mt-3 fw-bold text-dark fs-4 ep">John Oseni</p>
               <small>Developer</small>
             </div>
           </div>
@@ -238,7 +243,7 @@
               </small>
             </div>
 
-            <div class="col-md-4 text-center">
+            <div class="col-md-4 mt-5 mt-md-0 mt-lg-0 text-center">
               <img src="./img/icon3.png" alt="Icon" />
               <h4 class="text-dark mt-3 fw-bold">Free SSL Certificates</h4>
               <small>
@@ -248,7 +253,7 @@
               </small>
             </div>
 
-            <div class="col-md-4 text-center">
+            <div class="col-md-4 mt-5 mt-md-0 mt-lg-0 text-center">
               <img src="./img/icon4.png" alt="Icon" />
               <h4 class="text-dark mt-3 fw-bold">24x7 Friendly Support</h4>
               <small>
@@ -283,13 +288,61 @@
                   Discover More
                 </button>
               </div>
-              <div class="col-md-6">
+              <div class="col-md-6 mt-3 mt-lg-0">
                 <img
                   class="img-responsive mw-100"
                   draggable="false"
                   src="./img/pic.png"
                   alt=""
                 />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="container-fluid bg-primary card-body rounded-0">
+        <h1 class="fw-bold text-center text-white">
+          We Are Loved By Users And <br />
+          Clients Worldwide
+        </h1>
+
+        <div class="mt-5">
+          <div class="container">
+            <div class="col-md-10 mx-auto">
+              <div class="owl-carousel testimonial owl-theme">
+                <div
+                  class="card bg-dark text-white"
+                  style="border-top-right-radius: 0px"
+                >
+                  <div class="card-body">
+                    <p>
+                      Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                      Repellat, vero odit eum nemo dolores facere rerum
+                      excepturi odio, ullam dolore eos est reiciendis earum
+                      officia optio iure at. Animi, earum.
+                    </p>
+
+                    <div class="">
+                      <div class="mt-5 d-flex w-75">
+                        <img
+                          style="width: 60px; height: 60px"
+                          src="./img/Picture.png"
+                          alt=""
+                        />
+
+                        <div class="fw-bold mt-2 ms-2">
+                          <p>Precious Solomon Kayili</p>
+                          <img
+                            src="./img/Gold Stars.png"
+                            style="margin-top: -15px"
+                            class="w-50"
+                          />
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -305,7 +358,7 @@
         <div class="row my-auto mt-3">
           <!--Grid column-->
           <div class="col-lg-6 col-md-12 mb-md-0">
-            <h5 class="fw-bold fs-3">Code Space.</h5>
+            <h5 class="fw-bold text-dark fs-3">Code Space.</h5>
 
             <p class="pt-4">
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste
@@ -318,7 +371,10 @@
           <!--Grid column-->
           <div class="col-lg-6 mt-5 mt-lg-0 col-md-12 mb-md-0">
             <div>
-              <div class="social-icons">
+              <div
+                class="social-icons d-flex"
+                style="justify-content: flex-end"
+              >
                 <a href="#">
                   <img draggable="false" src="./img/instagram.png" alt="" />
                 </a>
@@ -340,8 +396,11 @@
                 </a>
               </div>
             </div>
-            <div class="mt-4 ms-auto fs-5" style="justify-content: flex-end">
-              <a href="mailto: hello@codespace.com">hello@codespace.com</a>
+            <div class="mt-4 ms-auto fs-5">
+              <a href="mailto: hello@codespace.com">
+                <span class="text-dark" class="pe-2">Send us a question:</span>
+                hello@codespace.com
+              </a>
             </div>
           </div>
           <!--Grid column-->
@@ -366,11 +425,40 @@
     <script src="./js/owl.carousel.min.js"></script>
     <script>
       $(document).ready(function () {
-        $(".owl-carousel").owlCarousel({
+        $(".testimonial").owlCarousel({
           responsiveClass: true,
           margin: 20,
           nav: true,
-          navText: ["<", ">"],
+          loop: true,
+          responsive: {
+            0: {
+              items: 1,
+              nav: true,
+            },
+            600: {
+              items: 1,
+              nav: true,
+            },
+            800: {
+              items: 1,
+              nav: true,
+            },
+            1000: {
+              items: 2,
+              nav: true,
+            },
+            1200: {
+              items: 2,
+              nav: true,
+            },
+          },
+        });
+
+        $(".teams").owlCarousel({
+          responsiveClass: true,
+          margin: 20,
+          items: 4,
+          nav: true,
           loop: true,
           responsive: {
             0: {
