--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link text-dark" href="#">About</a>
+                <a class="nav-link text-dark" href="/about.html">About</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-dark" href="#">Teams</a>
