--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/owl.carousel.min.css" />
     <link rel="stylesheet" href="./css/owl.theme.default.min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="shortcut icon" href="./img/fav.png" type="image/x-icon" />
     <title>Code Space</title>
   </head>
@@ -194,11 +200,7 @@
                 src="./img/team1.png"
                 alt=""
               />
-<<<<<<< HEAD
               <p class="mt-3 fw-bold text-dark fs-4 ep">John Oseni</p>
-=======
-              <p class="mt-3 fw-bold text-dark fs-4">Tayyib Gbongo</p>
->>>>>>> 5e570f83a9ee7b805ab4b246f362538485b31db8
               <small>Developer</small>
             </div>
             <div>
@@ -218,17 +220,13 @@
                 src="./img/team4.png"
                 alt=""
               />
-<<<<<<< HEAD
               <p class="mt-3 fw-bold text-dark fs-4 ep">John Oseni</p>
-=======
-              <p class="mt-3 fw-bold text-dark fs-4">Ewin Igwebuike</p>
->>>>>>> 5e570f83a9ee7b805ab4b246f362538485b31db8
               <small>Developer</small>
             </div>
             <div>
               <img
                 draggable="false"
-                class="w-100  rounded-3 h-25"
+                class="w-100 rounded-3 h-25"
                 src="./img/team3.png"
                 alt=""
               />
@@ -239,10 +237,10 @@
               <img
                 draggable="false"
                 class="w-100 rounded-3 mh-5"
-                src="./img/samuel.png"
+                src="./img/team5.png"
                 alt=""
               />
-              <p class="mt-3 fw-bold text-dark fs-4">Samuel Adeyemi</p>
+              <p class="mt-3 fw-bold text-dark fs-4 ep">Samuel Adeyemi</p>
               <small>Developer</small>
             </div>
           </div>
@@ -296,8 +294,8 @@
                   Projects
                 </h1>
                 <p class="text-white mt-5 text-light ep">
-                 A digital agency is a business you hire to outsource your digital marketing
-                 efforts, instead of handling in-house.
+                  A digital agency is a business you hire to outsource your
+                  digital marketing efforts, instead of handling in-house.
                 </p>
 
                 <button
