--- a/index.html
+++ b/index.html
@@ -53,9 +53,10 @@
                 <!-- Showcase Row Container  -->
                 <div class="row">
                     <!-- Text Container  -->
-                    <div class="col-md-6 pt-5 mt-5">
-                        <h1 class="showcase-title mb-4">Rewriting the African Narrative through Technology</h1>
-                        <p class="mb-7"><span class="brand text-uppercase">Codespace</span> is a Platform that aims to
+                    <div class="col-md-5 pt-5 mt-5 pb-5">
+                        <h1 class="showcase-title mb-4 mt-4">Rewriting the African Narrative through <span
+                                class="brand">Technology</span></h1>
+                        <p class="mb-8"><span class="brand text-uppercase">Codespace</span> is a Platform that aims to
                             build a
                             community
                             for
@@ -63,14 +64,28 @@
                             show the world how ready and capable we teenagers are to rewrite the African narrative
                             through <span class="brand">Technology</span>.
                         </p>
-                        <div class="showcase-socials">
+                        <!-- Social Container  -->
+                        <div class="showcase-socials mb-4">
                             <p>Follow Us</p>
+                            <a href="" class="social-link"><img src="Assets/img/icons/Instagram.svg" alt=""
+                                    class="social-icon"></a>
+                            <a href="" class="social-link"><img src="Assets/img/icons/twitter.svg" alt=""
+                                    class="social-icon"></a>
+                            <a href="" class="social-link"><img src="Assets/img/icons/telegram.svg" alt=""
+                                    class="social-icon"></a>
+                            <a href="" class="social-link"><img src="Assets/img/icons/slack.svg" alt=""
+                                    class="social-icon"></a>
                         </div>
-                        <div class="showcase-btn-container"></div>
+                        <!-- Button Container -->
+                        <div class="showcase-btn-container mt-5 mb-5 pb-5">
+                            <a href="" class="btn btn-discover "><span>Discover more</span> <img
+                                    src="Assets/img/icons/foward-button.svg" alt=""></a>
+                            <a href="" class="btn btn-outline-black">Join the Community</a>
+                        </div>
                     </div>
                     <!-- Image Column Container  -->
-                    <div class="col-md-6">
-                        <img src="Assets/img/header-img.png" class="img-fluid w-100 w-responsive " alt="">
+                    <div class="col-md-7 showcase-img-container">
+                        <img src="Assets/img/header-img.png" class="img-fluid  w-responsive showcase-img" alt="">
                     </div>
                 </div>
             </div>
