--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
         <div class="container-fluid pt-5">
             <section class="team-section pt-5">
                 <h4 class="text-uppercase brand mb-2 ">Our team</h4>
-                <h2>Team of Designers <br> and Developers</h2>
+                <h2 class="mb-2">Team of Designers <br> and Developers</h2>
                 <!-- Slider  -->
-                <div class="team-slider swiper">
-                    <div class="swiper-wrapper">
+                <div class="team-slider swiper mt-5 pt-2">
+                    <div class="swiper-wrapper mb-3">
 
                         <!-- Team Slider Item  -->
                         <div class="swiper-slide">
@@ -151,6 +151,24 @@
                         <!-- End of Team Slider Item i-->
                     </div>
                     <div class="swiper-pagination"></div>
+                </div>
+            </section>
+            <!-- Intro Section  -->
+            <section class="intro-section pt-4">
+                <div class="row pt-5">
+                    <div class="col-md-6 pt-5 mt-3 intro-text">
+                        <h2>We are changing the <br> Future With <span class="brand">Technology</span></h2>
+                        <div class="line-container ">
+                            <img src="Assets/img/icons/line.svg" alt="" class="img-fluid w-50 ">
+                        </div>
+                        <p class="pt-3">The world is not changed by people but by we <span class="brand">GenZ</span>.
+                            Big things
+                            require great collaboration
+                            and there are no epic heroes but groups of epic people building the future.</p>
+                    </div>
+                    <div class="col-md-6">
+                        <img src="Assets/img/intro.png" alt="" class="w-100 w-responsive img-fluid ">
+                    </div>
                 </div>
             </section>
         </div>
