--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
                         </div>
                         <!-- Button Container -->
                         <div class="showcase-btn-container mt-5 mb-5 pb-5">
-                            <a href="" class="btn btn-discover "><span>Discover more</span> <img
+                            <a href="" class="btn btn-discover btn-lg "><span>Discover&nbsp;more</span> <img
                                     src="Assets/img/icons/foward-button.svg" alt=""></a>
-                            <a href="" class="btn btn-outline-black">Join the Community</a>
+                            <a href="" class="btn btn-outline-black btn-lg">Join&nbsp;the&nbsp;Community</a>
                         </div>
                     </div>
                     <!-- Image Column Container  -->
@@ -155,7 +155,7 @@
             </section>
             <!-- Intro Section  -->
             <section class="intro-section pt-4">
-                <div class="row pt-5">
+                <div class="row pt-5 pb-5">
                     <div class="col-md-6 pt-5 mt-3 intro-text">
                         <h2>We are changing the <br> Future With <span class="brand">Technology</span></h2>
                         <div class="line-container ">
@@ -168,6 +168,80 @@
                     </div>
                     <div class="col-md-6">
                         <img src="Assets/img/intro.png" alt="" class="w-100 w-responsive img-fluid ">
+                    </div>
+                </div>
+            </section>
+            <!-- Team Projects Section  -->
+            <section class="team-projects pt-lg-5">
+                <h1 class="team-projects-h1">
+                    Team Projects
+                </h1>
+                <p class="team-projects-bio-p text-center">CODESPACE is a Platform that aims to build a community for
+                    teenagers. The
+                    platform aims to show the world how ready and capable We teenagers are to rewrite the African
+                    narrative through technology.</p>
+
+                <!-- Slider  -->
+                <div class="team-project-slider swiper mt-5 pt-2">
+                    <div class="swiper-wrapper mb-3">
+
+                        <!-- Team Project Slider Item  -->
+                        <div class="swiper-slide">
+                            <div class="team-project-slider-item afro-watch">
+                                <div class="team-project-header pt-5">
+                                    <h1 class="project-title">
+                                        Afro Watch
+                                    </h1>
+                                    <img src="Assets/img/team/clinton.png" alt=""
+                                        class="project-owner-bitmoji w-25 w-responsive img-fluid">
+                                </div>
+                                <p class="pt-2">Afro Watch is platform where you can stream over 100 + Live tv channels
+                                    on the go.
+                                    Without any interruption. and data consumption are well calculated. </p>
+                                <p>Built by: <span class="bold">Clinton Imaro</span></p>
+                                <a href="" class="btn btn-dark btn-lg mb-4 mt-2">View Project </a>
+                            </div>
+                        </div>
+                        <!-- End of Team Project Slider Item -->
+
+
+                        <!-- Team Project Slider Item  -->
+                        <div class="swiper-slide">
+                            <div class="team-project-slider-item covdash">
+                                <div class="team-project-header pt-5">
+                                    <h1 class="project-title">
+                                        Covdash
+                                    </h1>
+                                    <img src="Assets/img/team/precious.png" alt=""
+                                        class="project-owner-bitmoji w-25 w-responsive img-fluid">
+                                </div>
+                                <p class="pt-2">Mirum est notare quam littera gothica, quam nunc putamus parum claram,
+                                    anteposuerit litterarum formas </p>
+
+                                <p>Built by: <span class="bold">Precious Solomon Kayili</span></p>
+                                <a href="" class="btn btn-dark btn-lg mb-4 mt-2">View Project </a>
+                            </div>
+                        </div>
+                        <!-- End of Team Project Slider Item -->
+
+                        <!-- Team Project Slider Item  -->
+                        <div class="swiper-slide">
+                            <div class="team-project-slider-item gpa-calculator">
+                                <div class="team-project-header pt-5">
+                                    <h1 class="project-title">
+                                        GPA Calculator
+                                    </h1>
+                                    <img src="Assets/img/team/precious.png" alt=""
+                                        class="project-owner-bitmoji w-25 w-responsive img-fluid">
+                                </div>
+                                <p class="pt-2">You can use this app to keep track and calculate your GPA. This
+                                    calculator had been modified and tested to serve its purpose</p>
+                                <p>Built by: <span class="bold">Ameer Bamigbayan</span></p>
+                                <a href="" class="btn btn-dark btn-lg mb-4 mt-2">View Project </a>
+                            </div>
+                        </div>
+                        <!-- End of Team Project Slider Item -->
+
                     </div>
                 </div>
             </section>
@@ -189,6 +263,28 @@
             disableOnInteraction: false,
         },
         slidesPerView: "auto",
+        breakpoints: {
+            320: {
+                slidesPerView: 1,
+                spaceBetween: 40,
+            },
+
+            1200: {
+                slidesPerView: 4,
+                spaceBetween: 30,
+            },
+        },
+    });
+</script>
+<script>
+    new Swiper(".team-project-slider", {
+        speed: 600,
+        loop: true,
+        autoplay: {
+            delay: 5000,
+            disableOnInteraction: false,
+        },
+        slidesPerView: "auto",
         pagination: {
             el: ".swiper-pagination",
             type: "bullets",
@@ -202,7 +298,7 @@
 
             1200: {
                 slidesPerView: 4,
-                spaceBetween: 30,
+                spaceBetween: 85,
             },
         },
     });
