--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <a class="navbar-brand" href="/">Code Space</a>
                 <button class="navbar-toggler" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <i class="fas fa-bars"></i>
+                    <img src="Assets/img/icons/menu-bar.svg" alt="" class="navbar-toggler-icon">
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <!-- Nav Links  -->
@@ -58,10 +58,11 @@
                 <!-- Showcase Row Container  -->
                 <div class="row">
                     <!-- Text Container  -->
-                    <div class="col-md-5 pt-5 mt-5 pb-5">
+                    <div class="col-md-5 pt-md-5 mt-md-5 pb-md-5 pb-2 showcase-text-container">
                         <h1 class="showcase-title mb-4 mt-4">Rewriting the African Narrative through <span
                                 class="brand">Technology</span></h1>
-                        <p class="mb-8"><span class="brand text-uppercase">Codespace</span> is a Platform that aims to
+                        <p class="mb-8 showcase-bio"><span class="brand text-uppercase">Codespace</span> is a Platform
+                            that aims to
                             build a
                             community
                             for
@@ -71,7 +72,7 @@
                         </p>
                         <!-- Social Container  -->
                         <div class="showcase-socials mb-4">
-                            <p>Follow Us</p>
+                            <p>Follow&nbsp;Us</p>
                             <a href="" class="social-link"><img src="Assets/img/icons/Instagram.svg" alt=""
                                     class="social-icon"></a>
                             <a href="" class="social-link"><img src="Assets/img/icons/twitter.svg" alt=""
@@ -82,8 +83,8 @@
                                     class="social-icon"></a>
                         </div>
                         <!-- Button Container -->
-                        <div class="showcase-btn-container mt-5 mb-5 pb-5">
-                            <a href="" class="btn btn-discover btn-lg "><span>Discover&nbsp;more</span> <img
+                        <div class="showcase-btn-container mt-5 mb-md-5 pb-md-5 text-sm-center text-md-start">
+                            <a href="" class="btn btn-primary btn-lg "><span>Discover&nbsp;more</span> <img
                                     src="Assets/img/icons/foward-button.svg" alt=""></a>
                             <a href="" class="btn btn-outline-black btn-lg">Join&nbsp;the&nbsp;Community</a>
                         </div>
@@ -101,7 +102,7 @@
         <div class="container-fluid pt-5">
             <section class="team-section pt-5">
                 <h4 class="text-uppercase brand mb-2 ">Our team</h4>
-                <h2 class="mb-2">Team of Designers <br> and Developers</h2>
+                <h2 class="mb-2">Team of Designers <br class="br"> and Developers</h2>
                 <!-- Slider  -->
                 <div class="team-slider swiper mt-5 pt-2">
                     <div class="swiper-wrapper mb-3">
@@ -265,8 +266,8 @@
         slidesPerView: "auto",
         breakpoints: {
             320: {
-                slidesPerView: 1,
-                spaceBetween: 40,
+                slidesPerView: 2,
+                spaceBetween: 20,
             },
 
             1200: {
