--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     </div>
                     <!-- Image Column Container  -->
                     <div class="col-md-7 showcase-img-container">
-                        <img src="Assets/img/header-img.png" class="img-fluid  w-responsive showcase-img" alt="">
+                        <img src="Assets/img/header-img.png" class="img-fluid w-75  w-responsive showcase-img" alt="">
                     </div>
                 </div>
             </div>
