--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <a class="nav-link text-dark" href="/about.html">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-dark" href="#">Teams</a>
+                <a class="nav-link text-dark" href="#">Community</a>
               </li>
               <li class="nav-item">
                 <a href="#" class="nav-link text-dark">Project</a>
