--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link text-light" href="#">Teams</a>
+                <a class="nav-link text-light" href="#">Community</a>
               </li>
               <li class="nav-item">
                 <a href="#" class="nav-link text-light">Project</a>
