--- a/index.html
+++ b/index.html
@@ -15,16 +15,17 @@
     <link rel="stylesheet" href="Assets/vendors/mdbootstrap/css/mdb.min.css">
     <!-- Core CSS   -->
     <link rel="stylesheet" href="Assets/css/index.css">
+    <link rel="shortcut icon" href="./Assets/img/fav.jpg" type="image/x-icon">
     <title>Code Space</title>
 </head>
 
 <body>
     <!-- Main Header  -->
-    <header class="main-header">
+    <header class="main-header header">
         <!-- Navbar  -->
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand  main-text" href="/">Code Space</a>
+                <a class="navbar-brand" href="/">Code Space</a>
                 <button class="navbar-toggler" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <img src="Assets/img/icons/menu-bar.svg" alt="" class="navbar-toggler-icon">
@@ -33,19 +34,19 @@
                     <!-- Nav Links  -->
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link main-text active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link home-active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link main-text" href="/pages/about.html">About Us</a>
+                            <a class="nav-link" href="/pages/about.html">About Us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link main-text" href="#">Community</a>
+                            <a class="nav-link" href="#">Community</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link main-text" href="#">Projects</a>
+                            <a class="nav-link" href="#">Projects</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link  main-text" href="#">Contact Us</a>
+                            <a class="nav-link" href="#">Contact Us</a>
                         </li>
                     </ul>
                 </div>
@@ -104,7 +105,7 @@
         <div class="container-fluid pt-5">
             <section class="team-section pt-5">
                 <h4 class="text-uppercase brand mb-2 ">Our team</h4>
-                <h2 class="mb-2  main-text">Team of Designers <br class="br"> and Developers</h2>
+                <h2 class="mb-2">Team of Designers <br class="br"> and Developers</h2>
                 <!-- Slider  -->
                 <div class="team-slider swiper mt-5 pt-2">
                     <div class="swiper-wrapper mb-3">
@@ -157,13 +158,6 @@
                 </div>
             </section>
             <!-- Intro Section  -->
-<<<<<<< HEAD
-            <section class="intro-section pt-4">
-                <div class="row pt-5 pb-5">
-                    <div class="col-md-6 pt-5 mt-3 intro-text">
-                        <h2 class=" main-text">We are changing the <br> Future With <span class="brand">Technology</span></h2>
-                        <div class="line-container ">
-=======
             <section class="intro-section pt-md-4">
                 <div class="row pt-md-5 pb-5 g-5">
                     <div class="col-md-6 pt-sm-3 pt-md-5 mt-sm-3 mt-md-5 intro-text">
@@ -171,7 +165,6 @@
                                     class="brand">Technology</span> <img src="Assets/img/icons/line.svg" alt=""
                                     class="img-fluid line"></span></h2>
                         <!-- <div class="line-container ">
->>>>>>> f910bffb55bc4b55dac6f861ff4ea8774d0e9e34
                             <img src="Assets/img/icons/line.svg" alt="" class="img-fluid w-50 ">
                         </div> -->
                         <p class="pt-3">The world is not changed by people but by we <span class="brand">GenZ</span>.
@@ -185,13 +178,8 @@
                 </div>
             </section>
             <!-- Team Projects Section  -->
-<<<<<<< HEAD
-            <section class="team-projects pt-lg-5">
-                <h1 class="team-projects-h1  main-text">
-=======
             <section class="team-projects pt-lg-5 pb-lg-4">
                 <h1 class="team-projects-h1">
->>>>>>> f910bffb55bc4b55dac6f861ff4ea8774d0e9e34
                     Team Projects
                 </h1>
                 <p class="team-projects-bio-p text-center">CODESPACE is a Platform that aims to build a
