--- a/pages/about.html
+++ b/pages/about.html
@@ -11,8 +11,13 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
     <!-- Mdbootstrap CSS  -->
     <link rel="stylesheet" href="../Assets/vendors/mdbootstrap/css/mdb.min.css">
+    <link rel="stylesheet" href="../Assets/vendors/mdbootstrap/css/mdb.min.css">
     <!-- Core CSS   -->
     <link rel="stylesheet" href="../Assets/css/index.css">
+    <!-- Owl Carousel   -->
+    <link rel="stylesheet" href="../Assets/css/scrollbar.css" />
+    <link rel="stylesheet" href="../Assets/css/owl.carousel.min.css" />
+    <link rel="stylesheet" href="../Assets/css/owl.theme.default.min.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
@@ -20,7 +25,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="shortcut icon" href="../Assets/img/fav.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="../Assets/img/fav.jpg" type="image/x-icon" />
     <title>Code Space</title>
   </head>
   <body>
@@ -29,7 +34,7 @@
         <!-- Navbar -->
     <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/">Code Space</a>
+                <a class="navbar-brand text-white" href="/">Code Space</a>
                 <button class="navbar-toggler" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <img src="../Assets/img/icons/menu-bar.svg" alt="" class="navbar-toggler-icon">
@@ -38,19 +43,19 @@
                     <!-- Nav Links  -->
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+                            <a class="nav-link text-white " aria-current="page" href="/index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./pages/about.html">About Us</a>
+                            <a class="nav-link  active" href="/pages/about.html">About Us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Community</a>
+                            <a class="nav-link text-white" href="#">Community</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Projects</a>
+                            <a class="nav-link text-white" href="#">Projects</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contact Us</a>
+                            <a class="nav-link text-white" href="#">Contact Us</a>
                         </li>
                     </ul>
                 </div>
@@ -68,7 +73,7 @@
         >
           <div class="text-white text-center">
             <div>
-              <h1 class="ep" style="font-weight: 800; font-size: 50px">
+              <h1 class="ep text-white" style="font-weight: 800; font-size: 50px">
                 About Us
               </h1>
               <p class="fs-6 pt-2 ep text-center mx-auto" style="width: 65%">
@@ -88,7 +93,7 @@
         Design Agency
       </h1>
 
-      <div class="row mt-5">
+      <div class="row mt-5 ml-5">
         <div
           class="col-xl-6 col-lg-7 col-md-12"
           style="
@@ -96,9 +101,11 @@
                 rgba(0, 0, 0, 0.4),
                 rgba(0, 0, 0, 0.4)
               ),
-              url(../Assets/img/about.png);
+              url(../Assets/img/Bitmap.png);
             background-repeat: no-repeat;
             background-position: center;
+            background-size: cover;
+            border-radius: 10px;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -111,11 +118,11 @@
             data-target="#videoModal"
             style="height: 12rem; width: 12rem; border-radius: 50%"
           >
-            <img src="../Assets/img/play.png" alt="" />
+            <img src="../Assets/img/icons/play.svg" alt="" />
           </button>
         </div>
         <div
-          class="col-xl-6 col-lg-5 col-md-12 ms-sm-0 ms-md-0 mt-3 mt-xl-0 mt-lg-0"
+          class="col-xl-6 col-lg-5 col-md-12 ms-sm-0 ms-md-0 mt-3 mt-xl-0 mt-lg-0 ai-center"
         >
           <p>
             CODESPACE is a Platform that aims to build a community for
@@ -178,7 +185,7 @@
               <img
                 draggable="false"
                 class="w-100 rounded-3 h-25"
-                src="./img/team1.png"
+                src="../Assets/img/team/john.png"
                 alt=""
               />
               <p class="mt-3 fw-bold text-light fs-4 ep">John Oseni</p>
@@ -190,32 +197,32 @@
               <img
                 draggable="false"
                 class="w-100 rounded-3 h-25"
-                src="./img/team2.png"
+                src="../Assets/img/team/edwin.png"
                 alt=""
               />
-              <p class="mt-3 fw-bold text-light fs-4 ep">John Oseni</p>
-              <small class="text-light ep">Developer</small>
+              <p class="mt-3 fw-bold text-light fs-4 ep">Edwin</p>
+              <small class="text-light ep">Designer</small>
             </div>
             <div>
               <img
                 draggable="false"
                 class="w-100 rounded-3 h-25"
-                src="./img/team4.png"
+                src="../Assets/img/team/odetola.png"
                 alt=""
               />
-              <p class="mt-3 fw-bold text-light fs-4 ep">John Oseni</p>
+              <p class="mt-3 fw-bold text-light fs-4 ep">Odetola</p>
               <small class="text-light ep" style="margin-top: -10px"
-                >Developer</small
+                >Designer</small
               >
             </div>
             <div>
               <img
                 draggable="false"
                 class="w-100 rounded-3 h-25"
-                src="./img/team3.png"
+                src="../Assets/img/team/isabella.png"
                 alt=""
               />
-              <p class="mt-3 fw-bold text-light fs-4 ep">John Oseni</p>
+              <p class="mt-3 fw-bold text-light fs-4 ep">Isabella</p>
               <small class="text-light ep" style="margin-top: -10px"
                 >Developer</small
               >
@@ -224,7 +231,7 @@
               <img
                 draggable="false"
                 class="w-100 rounded-3 mh-5"
-                src="./img/team5.png"
+                src="../Assets/img/team/sauel.png"
                 alt=""
               />
               <p class="mt-3 fw-bold text-light fs-4 ep">Samuel Adeyemi</p>
