--- a/pages/about.html
+++ b/pages/about.html
@@ -11,20 +11,13 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
     <!-- Mdbootstrap CSS  -->
     <link rel="stylesheet" href="../Assets/vendors/mdbootstrap/css/mdb.min.css">
-    <link rel="stylesheet" href="../Assets/vendors/mdbootstrap/css/mdb.min.css">
     <!-- Core CSS   -->
     <link rel="stylesheet" href="../Assets/css/index.css">
     <!-- Owl Carousel   -->
     <link rel="stylesheet" href="../Assets/css/scrollbar.css" />
     <link rel="stylesheet" href="../Assets/css/owl.carousel.min.css" />
     <link rel="stylesheet" href="../Assets/css/owl.theme.default.min.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+
     <link rel="shortcut icon" href="../Assets/img/fav.jpg" type="image/x-icon" />
     <title>Code Space</title>
   </head>
@@ -34,7 +27,7 @@
         <!-- Navbar -->
 <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand text-white h5" href="/">Code Space</a>
+                <a class="navbar-brand ml-2 text-white h5" href="/">Code Space</a>
                 <button class="navbar-toggler" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <img src="../Assets/img/icons/menu-bar.svg" alt="" class="navbar-toggler-icon">
