--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     </header>
     <!-- Main  -->
     <main>
-        <div class="container-fluid pt-5">
+        <div class="container-fluid pt-5 pb-5">
             <section class="team-section pt-5">
                 <h4 class="text-uppercase brand mb-2 ">Our team</h4>
                 <h2 class="mb-2">Team of Designers <br class="br"> and Developers</h2>
@@ -159,7 +159,7 @@
             <!-- Intro Section  -->
             <section class="intro-section pt-md-4">
                 <div class="row pt-md-5 pb-5 g-5">
-                    <div class="col-md-6 pt-sm-3 pt-md-5 mt-sm-3 mt-md-5 intro-text">
+                    <div class="col-md-6 pt-sm-3 pt-md-5 mt-sm-3 mt-md-5 intro-text order-sm-last order-md-first">
                         <h2>We are changing the <br> Future With&nbsp;<span class="line-and-text-container"><span
                                     class="brand">Technology</span> <img src="Assets/img/icons/line.svg" alt=""
                                     class="img-fluid line"></span></h2>
@@ -171,7 +171,7 @@
                             require great collaboration
                             and there are no epic heroes but groups of epic people building the future.</p>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6 order-sm-1 order-md-2">
                         <img src="Assets/img/intro.png" alt="" class="w-100 w-responsive img-fluid ">
                     </div>
                 </div>
@@ -297,7 +297,52 @@
                     </div>
                 </div>
             </section>
+            <section class="vision-section-container">
+                <div class="row pt-md-4 mt-md-4">
+                    <div class="col-lg-6 vision-section-img-container">
+                        <img src="Assets/img/icons/vision-img.png" class="w-responsive w-75 img-fluid" alt="">
+                        <img src="Assets/img/icons/shadow-vision-img.png" alt="" class="w-responsive w-75 img-fluid">
+
+                    </div>
+                    <div class="col-lg-6 vision-section-text-container">
+
+                        <h2 class="brand">Vision</h2>
+                        <p>Our <span class="brand bold">vision</span> is to rewrite <span class="brand bold">African <br
+                                    class="br">
+                                Narrative</span> through <span class="brand bold">Technology</span>.
+
+                        </p>
+                    </div>
+                </div>
+            </section>
         </div>
+
+        <!-- Build your dream section  -->
+        <section class="build-your-dream-container">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-lg-6 build-your-dream-text-container">
+                        <h1>Help To Build Your <br class="br"> Dream Project</h1>
+                        <p>A digital agency is a business you hire to outsource <br class="br"> your digital marketing
+                            efforts, instead
+                            of handling in-house.</p>
+                        <a href="" class="btn btn-light btn-lg text-uppercase">Contact now</a>
+                    </div>
+                    <div class="col-lg-6 build-your-dream-img-container">
+                        <img src="Assets/img/icons/build-your-dream-img.png"
+                            class="img-fluid w-75 w-responsive build-future-project-img-1" alt="">
+                        <img src="Assets/img/icons/build-your-dream-img-shadow.png" class="img-fluid w-75 w-responsive"
+                            alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Faq Section  -->
+        <section class="faq-section">
+            <div class="container-fluid pt-5 pb-5 text-center">
+                <img src="Assets/img/faqs-img.png" alt="" class="w-100 w-responsive img-fluid">
+            </div>
+        </section>
     </main>
 </body>
 <!-- Mdbootstrap Js  -->
