--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                     <!-- Nav Links  -->
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active" aria-current="page" href="/">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">About Us</a>
+                            <a class="nav-link" href="/pages/about">About Us</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Community</a>
